Auswertung Teil 2 verfasst, Korrekturen
- Korrekturlesen: Bugfixes und kleinere Änderungen
- Unterkapitel bei Theorie ergänzt
- Makefile angepasst

--- a/v105/content/durchfuehrung.tex
+++ b/v105/content/durchfuehrung.tex
@@ -5,7 +5,8 @@
 Bei diesem Experiment soll das magnetische (Dipol-)Moment eines Permanentmagneten unter Ausnutzung zweier Verfahren bestimmt werden.
 Der Permanentmagnet befindet sich dabei in einer Billiardkugel der Masse $m_{\text{K}}$. Das Dipolmoment $\mu_{\text{Dipol}}$ des Mageneten ist entlang eines Stiels,
 welcher sich an der Kugel befindet, ausgerichtet. In diesen Stiel lässt sich wiederum eine kleine Aluminiumstange befestigen, an der eine Masse $m$ verschoben werden kann.
-Dies ist für eine der beiden Bestimmungsmethoden für $\mu_{\text{Dipol}}$ wichtig.
+
+
 Die Billiardkugel wird für beide Verfahren in ein homogenes Magnetfeld gesetzt. Dies geschieht mit Hilfe eines Helmholtz-Spulenpaares, in dessen Mitte sich eine
 Messinghalterung befindet, auf der die Kugel abgelegt werden kann. In der Halterung befinet sich ein Loch, über das ein \glqq Luftkissen\grqq \: erzeugt werden kann, auf dem
 die Kugel (im Optimalfall) reibungsfrei gelagert ist. Die Apparatur wird über ein Steuergerät reguliert. An diesem lässt sich das Luftkissen einschalten, die Feldrichtung
@@ -19,7 +20,7 @@ des Magnetfeldes anpassen und die Stromstärke einstellen. Die Stromstärke kann
 \end{figure}
 
 Vor der eigentlichen Durchführung der Messung müssen alle Apparatenkonstanten festgestellt werden. Dazu zählen die Eigenschaften des Helmholtzspulenpaares, die Massen der 
-Kugel und des Gewichtes am Stiel, sowie die geometrischen Abmessungen der Kugel. Die Werte für die Maße der Kugel und die Massen finden sich in \autoref{sec:Auswertung}.
+Kugel und der beweglichen Masse, sowie die geometrischen Abmessungen der Kugel. Die Werte für die Maße der Kugel und die Massen finden sich in \autoref{sec:Auswertung}.
 Das Helmholtzspulenpaar hat $N = 195$ Windungen, die einzelnen Spulen einen Radius von $R_{\text{Spule}} = 0.109\unit{\metre}$ und der Abstand der Spulen beträgt
 $d = 0.138\unit{\meter}$.
 
@@ -64,4 +65,5 @@ mit einer Stoppuhr gemessen. Beide Werte werden notiert und das Messverfahren wi
 Das Messen von 10 Schwingungsdauern hat den Grund, dass grade bei großen Stromstärken eine einzelne Schwingungsperiode sehr kurz ist und somit eine Ungenauigkeit beim Stoppen
 mit der Stoppuhr zu großen Abweichungen führen kann. Zusätzlich wurde in unserem Fall die Zeit auf zwei verschiedenen Stoppuhren unabhängig voneinander gestoppt, um den 
 Messumfang zu erhöhen und eventuelle Ungenauigkeiten, die durch den Experimentator verursacht werden könnten, heraus mitteln zu können.
-Die beiden 10 fachen Periodendauern werden anschließend zu einem Wert für eine Schwingungsdauer $T$ gemittelt. 
+Die beiden 10 fachen Periodendauern werden anschließend zu einem Wert für eine Schwingungsdauer $T$ gemittelt.
+ 
