--- a/v105/content/auswertung.tex
+++ b/v105/content/auswertung.tex
@@ -14,7 +14,7 @@ Helmholtzspulenpaar:
     &\text{Radius}& r_H &= 0.109 \unit{\metre} \\
     &\text{Abstand der Spulen}& d_H &= 0.138 \unit{\metre} \\
 \end{align*}
-Material:
+Materialkonstanten:
 \begin{align*}
     &\text{Kugeldurchmesser}& d_K &= (5.40 \pm 0.01) \unit{\centi\metre} \\
     &\text{Kugelmasse}& m_K &=  141.76  \unit{\gram} \\
@@ -52,14 +52,14 @@ Material:
 \end{table}
 
 \subsection{Bestimmung des magnetischen Momentes über die Erdgravitation}
-\label{AuswertungZu1}
-In \autoref{fig:Plot1} wird die Magentfeldstärke $B$ gegen den Abstand $r$ der aufgesteckten Masse bis zum Dipol aufgetragen. Der Abstand r wurde mit einer Ungenauigkeit von $\pm 0.001\unit{\centi\metre}$ gemessen.
-Die Magentfeldstärke $B$ in der Mitte des Helmholtzspulenpaares lässt sich gemäß der Gleichung \eqref{eqn:Helmholtz_B} aus der gemessenen Stromstärke $I$  berechnen(vgl.\autoref{tab:Mess1}). 
-Die gemessene Stromstärke ist mit einem Fehler von $\pm 0.05\unit{\ampere}$ behaftet. Zur Berechnung von B werden $R = r_H$ und $x = \frac{d_H}{2}$ verwendet.
+\label{subsec:AuswertungZu1}
+In \autoref{fig:Plot1} wird die Magentfeldstärke $B$ gegen den Abstand $r$ der aufgesteckten Masse zum Dipol aufgetragen. Der Abstand r wurde mit einer Ungenauigkeit von $\pm 0.001\unit{\centi\metre}$ gemessen.
+Die Magentfeldstärke $B$ in der Mitte des Helmholtzspulenpaares lässt sich gemäß der Gleichung \eqref{eqn:Helmholtz_B} aus der gemessenen Stromstärke $I$  berechnen (vgl.\autoref{tab:Mess1}). 
+Die gemessene Stromstärke ist mit einer Messunsicherheit von $\pm 0.05\unit{\ampere}$ behaftet. Zur Berechnung von B werden $R = r_H$ und $x = \frac{d_H}{2}$ verwendet.
 \begin{figure}
     \centering
     \includegraphics[width=\textwidth]{build/plot1.pdf}
-    \caption{linearer Fit \cite{scipy} zu den Messwerten der Gravitationsmethode}
+    \caption{Linearer Fit \cite{scipy} zu den Messwerten der Gravitationsmethode.}
     \label{fig:Plot1}
 \end{figure} 
 \\
@@ -73,8 +73,74 @@ ergeben sich die Parameter
     a &= (3.10 \pm 0.04) 10^{-2}\unit{\tesla\per\metre}\\
     b &= (3.24 \pm 0.34) 10^{-4} \unit{\tesla}\\
 \end{align*}
-für den Fit. Dieser Fit wird dann in Formel \eqref{eqn:Drehmoment_Gleichgewicht2} eingesetzt. Dabei kann $b$ vernachlässigt. Nach umstellen der Formel 
+für den Fit. Dieser Fit wird dann in Formel \eqref{eqn:Drehmoment_Gleichgewicht2} eingesetzt. Dabei kann $b$ vernachlässigt werden. Nach umstellen der Formel 
 \eqref{eqn:Drehmoment_Gleichgewicht2} kann das magnetische Moment berechnet werden.
+\begin{equation}
+    \label{eqn:mu1}
+    \mu_{\text{Dipol}} = (0.440 \pm 0.006) \unit{\square\ampere\per\metre}
+\end{equation}
+
+\subsection{Bestimmung des magnetischen Moments über die Schwingungsdauer}
+\label{subsec:AuswertungZu2}
+
+Wie in \autoref{subsec:Methode2} beschrieben, wird beim zweiten Messverfahren das Dipolmoment über die Schwingungsdauer bestimmt.
+Dazu wird der Zusammenhang \eqref{eqn:Schwingungsdauer} ausgenutzt. In \autoref{tab:Mess2} finden sich die gemessenen Größen und die Schwingungsdauer $T$, die
+sich aus den Messwerten berechnet. 
+
+\begin{table}
+    \centering
+    \caption{Messdaten zur Methode 2: Schwingungsdauer. \\ Es wurden jeweils 2 unabhängige Werte für die 10-fache Schwingungsdauer gemessen
+            und daraus der Mittelwert $T$ einer einzigen Periode gebildet.}
+    \label{tab:Mess2}
+    \begin{tabular}{S[table-format=1.2] S S[table-format=2.2] S[table-format=1.2]}
+        \toprule
+        $I \mathbin{/} \unit{\ampere}$ & ${10} T_{1} \mathbin{/} \unit{\second}$ & ${10} T_{2} \mathbin{/} \unit{\second}$ & $T \mathbin{/} \unit{\second}$ \\
+        \midrule
+        0.5  & 23.66 & 24.07 & 2.39 \\
+        1.0  & 16.44 & 16.61 & 1.65 \\
+        1.5  & 13.52 & 13.55 & 1.35 \\
+        2.0  & 11.53 & 11.61 & 1.16 \\
+        2.5  & 10.30 & 10.66 & 1.05 \\
+        3.0  &  9.40 &  9.41 & 0.94 \\
+        3.25 &  9.04 &  9.12 & 0.91 \\
+        3.5  &  8.69 &  8.81 & 0.88 \\
+        4.0  &  8.13 &  8.24 & 0.82 \\
+        4.1  &  8.10 &  8.14 & 0.81 \\
+    \bottomrule 
+    \end{tabular}
+\end{table}
+
+Wie man an \eqref{eqn:Schwingungsdauer} erkennen kann, besteht ein linearer Zusammenhang zwischen dem Quadrat der Schwingungsdauer und dem Kehrwert des Betrags der magnetischen
+Flussdichte $B$, der die Form hat:
+\begin{equation*}
+    T^2 = a \cdot \frac{1}{B}
+\end{equation*}
+
+Zur Ermittlung des Parameters a werden die aus den Messwerten berechneten Größen $B^{-1}$ und $T^2$ gegeneinander aufgetragen, wie es in \autoref{fig:Plot2} zu erkennen ist.
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\textwidth]{build/plot2.pdf}
+    \caption{Linearer Fit \cite{scipy} zu den Messwerten der Schwingungsmethode.}
+    \label{fig:Plot2}
+\end{figure} 
+
+Wie auch bei der ersten Methode lässt sich dadurch mittels linearer Regression eine Gerade finden, die den Verlauf der Messwerte am geeignetsten modelliert.
+Die bestimmten Parameter der Geraden $f(x) = ax + b$  lauten:
 \begin{align*}
-    \mu_{\text{Dipol}} = (0.440 \pm 0.006) \unit{\square\ampere\per\metre}\\
+    a &= (3.84 \pm 0.04) \cdot 10^{-3} \unit{\tesla\second\squared} \\
+    b &= (-0.046 \pm 0.014) \unit{\second\squared}
 \end{align*}
+Das Trägheitsmoment $J_\text{K}$ der Kugel berechnet sich mit den oben genannten Abmessungen zu \eqref{eqn:Trägheitsmoment_Kugel}:
+\begin{equation*}
+    J_\text{K} = \frac{2}{5} m_{\text{K}} r_{\text{K}}^2 = (4.1337 \pm 0.0031) \cdot 10^{-5} \unit{\kilogram\meter\squared}  
+\end{equation*}
+Damit folgt aus Formel \eqref{eqn:Schwingungsdauer}, unter Vernachlässigung von $b$ (da theoretisch $b = 0$ gilt):
+\begin{equation*}
+    a = \frac{4 \pi^2 J_{\text{K}}}{\mu_{\text{Dipol}}}
+\end{equation*}
+Umgestellt nach $\mu_{\text{Dipol}}$ ergibt sich:
+\begin{equation}
+    \label{eqn:mu2}
+    \mu_{\text{Dipol}} = \frac{4 \pi^2 J_{\text{K}}}{a} = (0.425 \pm 0.004) \unit{\ampere\squared\per\metre}
+\end{equation}
