diskussion feddig und plot nur auskommentiertes hinzugefügt

--- a/v105/content/diskussion.tex
+++ b/v105/content/diskussion.tex
@@ -1,2 +1,34 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Zunächst wird die Gravitationsmethode diskutiert. Durch dise Methode wurde magnetische Dipolmoment 
+\begin{align*}
+    \mu_{Dipol, Gravitation} = (0.440 \pm 0.006)\unit{\ampere\squared\per\metre}
+\end{align*}
+bestimmt. Da es zu diesem Versuch keinen Litaraturwert gibt, weil das magnetische Dipolmoment immer vom Versuchsaufbau abhängt, kann man keine gute Aussage über die Qualität des 
+Wertes machen. Lediglich der sehr lineare Verlauf der Messwerte, wie in \autoref{fig:Plot1} zu sehen ist, deutet auf die Qualität unseres bestimmten Wertes hin. 
+Dennoch lassen sich auch hier Fehlerquellen feststellen. So ist es aus reiner Betrachtung nicht möglich das exakte Gleichgewicht zu erkennen, wodurch sich Fehler in der 
+eingestellten Stromstärke für das Magnetfeld ergeben. Dazu kommt der Energieverlust des Systems durch die Reibungsverlust des Luftkissens, sowie eine leicht ungleichmäßige 
+verteilung des Luftkissens. Einer weitere Fehlerquelle liegt in dem nicht koplett ebenen Aufbau. Trotz all dieser möglichen Fehlerquellen ist ein Fehler 
+von $\pm 0.006 \unit{\ampere\squared\per\metre}$ eine gute Messung.
+
+
+Ebenso gibt es auch zur Methode des Schwingungsdauer keinen Litaraturwert, mit welchem man den gemessenen Wert für das magnetische Dipolmoment
+\begin{align*} 
+    \mu_{Dipol, Schwingung} = (0.425 \pm 0.005)\unit{\ampere\squared\per\metre}
+\end{align*}   
+vergleichen könnte. Außerdem liegen hier ebenfalls die aufbaubedingten Fehlermöglichkeiten vor. 
+Bei dieser Methode kommen noch ein mögliche Fehler durch die Schwingung hinzu. So gilt die zur Bestimmung verwendete Formel lediglich für kleine Winkel. Diese sind aber durch 
+händisches Auslenken nicht unbedingt eingehalten. Dazu kommt noch, dass das Pendel nicht perfekt in einer Ebene geschwungen hat und man auch nicht den genauen Zeitpunkt der 
+maximalen Auslenkung bestimmen kann. Auch in dieser Methode ist das einzige Qualitätsmaß wieder die Linearität der in \autoref{fig:Plot2} aufgetragenen Messwerte. 
+Auch in dieser Methode ist der Verlauf sehr linear und der Fehler $\pm 0.005\unit{\ampere\squared\per\metre}$ relativ klein. 
+
+
+Verlgeicht man nun die beiden Methoden erkennt man, dass die beiden errechneten Werte jeweils nicht in der Fehlertoleranz des anderen liegen. Dies ist durch die teilweise nicht 
+bestimmbaren Fehler, wie z.B das Augenmaß beim Gleichgewicht oder die händische Auslenkung beim Schwingen, zu erklären.
+
+
+Betrachtet man die prozentuale Abweichung der magnetischen Dipolmomente 
+\begin{align*}
+    \Delta_{\text{Abweichung}} = (3.5 \pm 0.02)\%
+\end{align*}
+kann man sagen, dass beiden Methoden von ähnlicher Qualität sind.  
