--- a/header.tex
+++ b/header.tex
@@ -98,6 +98,7 @@
 \usepackage{subcaption}
 
 % Grafiken können eingebunden werden
+\usepackage{pdfpages}
 \usepackage{graphicx}
 
 % schöne Tabellen
