--- a/v105/content/diskussion.tex
+++ b/v105/content/diskussion.tex
@@ -9,8 +9,8 @@ Wertes machen. Lediglich der sehr lineare Verlauf der Messwerte, wie in \autoref
 Dennoch lassen sich auch hier mögliche Fehlerquellen feststellen. So ist es aus reiner Betrachtung nicht möglich das exakte Kräftegleichgewicht zu erkennen, wodurch sich Fehler in der 
 eingestellten Stromstärke für das Magnetfeld ergeben. Dazu kommt der Energieverlust des Systems durch die Reibung des Luftkissens, sowie eine leicht ungleichmäßige und unregelmäßige
 Verteilung der Luftkissenströmung. Einer weitere Fehlerquelle liegt in dem nicht komplett ebenen Aufbau.
-Abgesehen von diesen nicht konkret bestimmbaren Messunsicherheiten ergibt sich nur eine geringe Unsicherheit von $\pm 0.006 \unit{\ampere\squared\per\metre}$ durch 
-diverse Ableseungenauigkeiten.
+Abgesehen von diesen nicht konkret bestimmbaren Messunsicherheiten ergibt sich nur eine Unsicherheit von $\pm 0.006 \unit{\ampere\squared\per\metre}$ durch 
+diverse Ableseungenauigkeiten. Diese fällt in Relation zu der Größe des bestimmten Wertes nur sehr klein aus.
 
 Das Dipolmoment der Schwingungsmethode ergab sich zu
 \begin{align*} 
