Bilder der Schwingungen

--- a/lit.bib
+++ b/lit.bib
@@ -37,7 +37,14 @@
 	title        = {V105 - Das Magnetische Moment},
 	organization = {TU Dortmund},
 	urldate      = {2021-11-24},
-	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1712442/mod_resource/content/1/V353.pdf},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1884522/mod_resource/content/1/V105.pdf},
+}
+
+@online{v106,
+	title        = {V106 - Gekoppelte Schwingungen},
+	organization = {TU Dortmund},
+	urldate      = {2021-12-02},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1712437/mod_resource/content/2/V106.pdf},
 }
 
 @book{Demtröder_Exp_P_1,
