--- a/v106/content/durchfuehrung.tex
+++ b/v106/content/durchfuehrung.tex
@@ -1,2 +1,44 @@
 \section{Durchführung}
 \label{sec:Durchführung}
+In diesem Versuch werden alle untersuchten Schwing- und Schwebedauern für zwei unterschiedliche Pendellängen bestimmt. Dies kann durch unterschiedliche Aufhängungen der Masse am 
+Pendel realiusiert werden, da die angehängte Masse sehr viel Größer ist als die überstehende Masse des Stabes(siehe \autoref{fig:Aufbau1}).
+Die Schwing- und Schwebedauern werden für verschiedene Arten von Schwingungen gemessen. Vorbereitent dazu wird zunächst überlegt, ob es sich bei diesem Versuch um eine 
+harmonische Schwingung handelt. Eine harmonische Schwingung muss durch  Sinus- und Kosinusfunktion beschrieben werden können und es muss ein lineares Kraftgesetzt gelten.
+Außerdem muss die Energie erhalten sein. Die ersten beiden Bedingungen gelten für ein Pendel, wie es imer Versuch genutzt wird. Aufgrund der kurzen Messdauern kann annähernde 
+Energieerhaltung angenommen werden. Um nun die in \autoref{sec:Theorie} nutzen zu können dürfen bei der Durchführung lediglich kleine Auslenkungen der Pendel verwendet werden, 
+also solche bei denen die Kleinwinkelnäherung noch möglichst genau gilt. Dies ist bis zu einem Auslenkwinkel von circa $5\textdegree$ gegeben. 
+
+
+Für diesen Versuch benötigt man zwei identische Pendel(siehe \autoref{fig:Aufbau1}), welche durch eine Feder gekoppelt werden können(siehe \autoref{fig:Aufbau2}).
+\begin{figure}
+    \centering
+    \includegraphics[width=0.4\textwidth]{content/Einzelpendel.jpg}
+	\caption{Aufnahme des Versuchaufbaus}
+	\label{fig:Aufbau1}
+\end{figure}
+Zuerst wird die Schwingungsdauer eines einfachen Pendels bestimmt. Dazu werden fünf Schwingungsdauern gemessen um den Fehler der Zeitmessung möglichst klein zu halten.
+Dies wird zehn mal an beiden Pendeln durchgeführt, um auch die möglichen Unterschiede der beiden Einzelpendel zueinander gemessen zu haben. 
+
+
+Danach wird die Kopplungsfeder an die Penel wie in \autoref{fig:Aufbau2} angebracht. 
+\begin{figure}
+    \centering
+    \includegraphics[width=0.4\textwidth]{content/Gekoppelt.jpg}
+	\caption{Aufnahme des Versuchaufbaus}
+	\label{fig:Aufbau2}
+\end{figure}
+Zuerst wird eine gleichsinnige Schwingung der gekoppelten Pendel untersucht. Dazu werden die Pendel, wie in \autoref{fig:gleichsinnig} zu sehen ist, um den gleichen Winkel ausgelenkt.
+Es werden pro Messung fünf Schwingungsdauern gemessen. Die Schwingungsdauer wird von einer maximalen Auslenkung bis zur selben maximalen Auslenkung gemessen. Erneut werden zehn
+Messungen durchgeführt. 
+
+
+Danach wird die gegensinnige Schwingung untersucht. Die Pendel werden gemäß \autoref{fig:gegensinnig} um den negativen Winkel zueinander ausgelenkt. Eine Schwingungsdauer wird von
+der äußeren Auslenkung bis zur nächsten äußeren Auslenkung gemessen. Auch hier werden fünf Schwingungsdauern zehn mal gemessen. 
+
+
+Zuletzt untersucht man die gekoppelte Schwingung beziehungsweise den Schwebungsfall. Eines der Pendel soll sich in Ruhelage befinden während das Andere ausgelenkt wird. 
+\autoref{fig:schwebungsfall} stellt die beschrieben Auslenkung dar. Hier wird die Schwebungssdauer von einer Ruhelage eines Pendels bis zu seiner nächsten bestimmt. Dabei muss sehr
+genau beobachtet werden wann die Ruhelage eintrifft, da kurz vor der Ruhelage noch sehr kleine Schwingungen ausgeübt werden. Zu dieser Messung reicht eine Schwebungsdauer, da diese
+ausreichend lang ist. Zusätzlich soll die Schwingungsdauern gemessen werden. Diese ist beim Schwebungsfall bei einem der Pendel zwisches dessen Ruhelagen zu messen. Je nach länge 
+des Pendel können hier nur 3-5 Schwingungsdauer gemessen werden, da sich das Pendel dann schon wieder in Ruhelage begibt. Es sollen ebenfalls 10 Messungen der Schwing- und Schwebedauern
+durchgeführt werden. 
