--- a/v106/content/durchfuehrung.tex
+++ b/v106/content/durchfuehrung.tex
@@ -27,17 +27,17 @@ Danach wird die Kopplungsfeder an die Penel wie in \autoref{fig:Aufbau2} angebra
 	\caption{Aufnahme des Versuchaufbaus}
 	\label{fig:Aufbau2}
 \end{figure}
-Zuerst wird eine gleichsinnige Schwingung der gekoppelten Pendel untersucht. Dazu werden die Pendel, wie in \autoref{fig:gleichsinnig} zu sehen ist, um den gleichen Winkel ausgelenkt.
+Zuerst wird eine gleichsinnige Schwingung der gekoppelten Pendel untersucht. Dazu werden die Pendel, wie in \autoref{fig:Gleichsinnig} zu sehen ist, um den gleichen Winkel ausgelenkt.
 Es werden pro Messung fünf Schwingungsdauern gemessen. Die Schwingungsdauer wird von einer maximalen Auslenkung bis zur selben maximalen Auslenkung gemessen. Erneut werden zehn
 Messungen durchgeführt. 
 
 
-Danach wird die gegensinnige Schwingung untersucht. Die Pendel werden gemäß \autoref{fig:gegensinnig} um den negativen Winkel zueinander ausgelenkt. Eine Schwingungsdauer wird von
+Danach wird die gegensinnige Schwingung untersucht. Die Pendel werden gemäß \autoref{fig:Gegensinnig} um den negativen Winkel zueinander ausgelenkt. Eine Schwingungsdauer wird von
 der äußeren Auslenkung bis zur nächsten äußeren Auslenkung gemessen. Auch hier werden fünf Schwingungsdauern zehn mal gemessen. 
 
 
 Zuletzt untersucht man die gekoppelte Schwingung beziehungsweise den Schwebungsfall. Eines der Pendel soll sich in Ruhelage befinden während das Andere ausgelenkt wird. 
-\autoref{fig:schwebungsfall} stellt die beschrieben Auslenkung dar. Hier wird die Schwebungssdauer von einer Ruhelage eines Pendels bis zu seiner nächsten bestimmt. Dabei muss sehr
+\autoref{fig:Schwebung} stellt die beschrieben Auslenkung dar. Hier wird die Schwebungssdauer von einer Ruhelage eines Pendels bis zu seiner nächsten bestimmt. Dabei muss sehr
 genau beobachtet werden wann die Ruhelage eintrifft, da kurz vor der Ruhelage noch sehr kleine Schwingungen ausgeübt werden. Zu dieser Messung reicht eine Schwebungsdauer, da diese
 ausreichend lang ist. Zusätzlich soll die Schwingungsdauern gemessen werden. Diese ist beim Schwebungsfall bei einem der Pendel zwisches dessen Ruhelagen zu messen. Je nach länge 
 des Pendel können hier nur 3-5 Schwingungsdauer gemessen werden, da sich das Pendel dann schon wieder in Ruhelage begibt. Es sollen ebenfalls 10 Messungen der Schwing- und Schwebedauern
