--- a/v106/content/theorie.tex
+++ b/v106/content/theorie.tex
@@ -47,7 +47,7 @@ mit speziellen Anfangsbedigungen unterschieden, die im folgenden diskutiert werd
     die Dauer einer Periode dieses Prozesses, also die Zeit von Ruhelage bis ernueter Ruhelage eines Pendels. Die Schwingungsfrequenz
     \begin{gather}
         \label{eqn:Schwebung}
-        \omega_{\text{S}} = \omega_+ - \omega_- \qquad \text{und die Dauer} \qquad T_{\text{S}}  = \frac{T_+ \cdot T_-}{T_+ - T_-}
+        \omega_{\text{S}} = \omega_- - \omega_+ \qquad \text{und die Dauer} \qquad T_{\text{S}}  = \frac{T_+ \cdot T_-}{T_+ - T_-}
     \end{gather}
     lassen sich durch die Schwingungsdauern $T_+$ und $T_-$ der beiden anderen Fälle bestimmen.
     Aus den genannten Frequenzen kann ebenfalls die Federkonstante
