Kleine Fixes + schönere Ausgabe der Rechnungen

--- a/v106/content/auswertung.tex
+++ b/v106/content/auswertung.tex
@@ -9,7 +9,7 @@ Für den zweiten Messdurchgang wurde die Länge auf $(78.4\pm 0.1)\unit{\centi\m
     \label{tab:Mess1}
     \begin{tabular}{S S S S S S[table-format=1.2]}
         \toprule
-        $\unit{{5}T_{1}\per\second}$ & $\unit{{5}T_{2}\per\second}$ & $\unit{{5}T_+\per\second}$ & $\unit{{5}T_-\per\second}$ & $\unit{{5}T\per\second}$ & $\unit{{5}T_s\per\second}$ \\
+        $\unit{{5}T_{1}\per\second}$ & $\unit{{5}T_{2}\per\second}$ & $\unit{{5}T_+\per\second}$ & $\unit{{5}T_-\per\second}$ & $\unit{{3}T\per\second}$ & $\unit{T_s\per\second}$ \\
         \midrule
         6.18 & 5.98 & 6.11 & 5.07 & 3.32 & 6.06 \\
         6.11 & 5.79 & 6.15 & 5.07 & 3.45 & 6.20 \\
@@ -31,7 +31,7 @@ Für den zweiten Messdurchgang wurde die Länge auf $(78.4\pm 0.1)\unit{\centi\m
     \label{tab:Mess2}
     \begin{tabular}{S S S S S[table-format=1.2] S[table-format=2.2]}
         \toprule
-        $\unit{{5}T_{1}\per\second}$ & $\unit{{5}T_{2}\per\second}$ & $\unit{{5}T_+\per\second}$ & $\unit{{5}T_-\per\second}$ & $\unit{{5}T\per\second}$ & $\unit{{5}T_s\per\second}$ \\
+        $\unit{{5}T_{1}\per\second}$ & $\unit{{5}T_{2}\per\second}$ & $\unit{{5}T_+\per\second}$ & $\unit{{5}T_-\per\second}$ & $\unit{{5}T\per\second}$ & $\unit{T_s\per\second}$ \\
         \midrule
         8.89 & 8.81 & 8.93 & 8.09 & 8.22 & 20.20 \\
         8.79 & 8.75 & 8.98 & 8.20 & 8.33 & 20.10 \\
