--- a/v106/content/durchfuehrung.tex
+++ b/v106/content/durchfuehrung.tex
@@ -9,11 +9,11 @@ Energieerhaltung angenommen werden. Um nun die in \autoref{sec:Theorie} nutzen z
 also solche bei denen die Kleinwinkelnäherung noch möglichst genau gilt. Dies ist bis zu einem Auslenkwinkel von circa $5\textdegree$ gegeben. 
 
 
-Für diesen Versuch benötigt man zwei identische Pendel(siehe \autoref{fig:Aufbau1}), welche durch eine Feder gekoppelt werden können(siehe \autoref{fig:Aufbau2}).
+Für diesen Versuch benötigt man zwei identische Pendel (siehe \autoref{fig:Aufbau1}), welche durch eine Feder gekoppelt werden können (siehe \autoref{fig:Aufbau2}).
 \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{content/Einzelpendel.jpg}
-	\caption{Aufnahme des Versuchaufbaus}
+	\caption{Aufbau des Versuchs: Zwei Stabpendel mit höhenverstellbaren Massen.}
 	\label{fig:Aufbau1}
 \end{figure}
 Zuerst wird die Schwingungsdauer eines einfachen Pendels bestimmt. Dazu werden fünf Schwingungsdauern gemessen um den Fehler der Zeitmessung möglichst klein zu halten.
@@ -24,7 +24,7 @@ Danach wird die Kopplungsfeder an die Penel wie in \autoref{fig:Aufbau2} angebra
 \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{content/Gekoppelt.jpg}
-	\caption{Aufnahme des Versuchaufbaus}
+	\caption{Stabpendel mit Kopplungsfeder.}
 	\label{fig:Aufbau2}
 \end{figure}
 Zuerst wird eine gleichsinnige Schwingung der gekoppelten Pendel untersucht. Dazu werden die Pendel, wie in \autoref{fig:Gleichsinnig} zu sehen ist, um den gleichen Winkel ausgelenkt.
