--- a/v106/content/theorie.tex
+++ b/v106/content/theorie.tex
@@ -78,6 +78,6 @@ mit speziellen Anfangsbedigungen unterschieden, die im folgenden diskutiert werd
         \caption{Gekoppelt / Schwebung}
         \label{fig:Schwebung}
       \end{subfigure}
-    \caption{Die Schwingungsarten des Doppelpendels}
+    \caption{Die Schwingungsarten des Doppelpendels. \cite{v106}}
     \label{fig:Schwingungen}
 \end{figure}
